Se agregó el video y barra de descrioción del video

--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#" ><i class="fas fa-grip-lines"></i><span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#"><i class="fas fa-grip-lines"></i><span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <br>
                 <li class="nav-item active">
-                   <a class="nav-link" href="#" ><i class="fab fa-youtube Logo-Yutu"><span class="Letra-Logo-Yutu">  YouTube</span></i></a> 
+                    <a class="nav-link" href="#"><i class="fab fa-youtube Logo-Yutu"><span class="Letra-Logo-Yutu">
+                                YouTube</span></i></a>
                 </li>
                 <form class="my-2 my-lg-0">
-                    <input class="search" type="search" placeholder="Search. . ." aria-label="Search"
-                    <button><i class="fas fa-search searchIcon sizeIcon"></i></button>
+                    <input class="search" type="search" placeholder="Search. . ." aria-label="Search" <button><i
+                        class="fas fa-search searchIcon sizeIcon"></i></button>
                 </form>
                 <li class="nav-item active sizeIcon">
                     <i class="fas fa-upload uploadIcon"></i>
@@ -44,7 +46,30 @@
             </ul>
         </div>
     </nav>
-
+    <div class="yutuVideo">
+        <div class="row">
+            <div class="col-8">
+                <iframe width="800" height="400" src="https://www.youtube.com/embed/CW5oGRx9CLM" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <br>
+                <span class="text-primary">#TheWeeknd #FalseAlarm #Music #GrandeProfe</span>
+                <h5 class="text-white"> The Weeknd - False Alarm (Official Video) </h5>
+                <div class="d-flex bd-highlight">
+                    <div class="p-2 flex-grow-1 bd-highlight">177,750,051 vistas•13 oct. 2016</div>
+                    <div class="p-2 bd-highlight"><i class="fas fa-thumbs-up"></i> 2.6 M</div>
+                    <div class="p-2 bd-highlight"><i class="fas fa-thumbs-down"></i> 95,997</div>
+                    <div class="p-2 bd-highlight"><i class="fas fa-share"></i> COMPARTIR</div>
+                    <div class="p-2 bd-highlight"><i class="fas fa-folder-plus"></i> GUARDAR</div>
+                    <div class="p-2 bd-highlight"><i class="fas fa-ellipsis-h"></i></div>
+                  </div>
+            </div>
+            <div class="col-4">
+                <p>asaddadad</p>
+            </div>
+        </div>
+    </div>
 
 
 
