Se agregó lista de reproducción de videos

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         <div class="row">
             <div class="col-8">
                 <iframe width="800" height="400" src="https://www.youtube.com/embed/CW5oGRx9CLM" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen>
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
                 <br>
                 <span class="text-primary">#TheWeeknd #FalseAlarm #Music #GrandeProfe</span>
@@ -63,10 +62,242 @@
                     <div class="p-2 bd-highlight"><i class="fas fa-share"></i> COMPARTIR</div>
                     <div class="p-2 bd-highlight"><i class="fas fa-folder-plus"></i> GUARDAR</div>
                     <div class="p-2 bd-highlight"><i class="fas fa-ellipsis-h"></i></div>
-                  </div>
+                </div>
             </div>
             <div class="col-4">
-                <p>asaddadad</p>
+                <ul>
+                    <li>
+                        <div class="d-flex bd-highlight">
+                            <div class="p-2 flex-grow-1 bd-highlight aContinuacion" style="font-size: 14px;">A continuación</div>
+                            <div class="p-2 flex-grow-1 bd-highlight repAutotamica" style="font-size: 12px;">REPRODUCCIÓN AUTOMÁTICA</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4">
+                                
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <hr class="hr">
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/7OrLroFa0AI/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLCLTPP0nydPPk1xsQTe2fq7f_o1kg">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="img" class="videoRep" alt="" width="168"
+                                src="https://i.ytimg.com/vi/ItL6vcUrpUs/hqdefault.jpg?sqp=-oaymwEiCKgBEF5IWvKriqkDFQgBFQAAAAAYASUAAMhCPQCAokN4AQ==&amp;rs=AOn4CLAyjoLvKXGUg6mP_Jolj0a-0C6crQ">          
+                            </div>
+                            <div class ="col">
+                                <div class="ml-2">
+                                    <p style="font-size: 12px;">MACKLEMORE FEAT DAVE B & TRAVIS THOMPSON - CORNER STORE (Official Music Video)</p>
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">Macklemore LLC</p>  
+                                    <p style="font-size: 11px;" class="textoSecundarioVideo">22 M de vistas - hace 3 años</p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
