se agregó la sección de comentarios

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                 <span class="text-primary">#TheWeeknd #FalseAlarm #Music #GrandeProfe #GrandeMilo</span>
                 <h5 class="text-white"> The Weeknd - False Alarm (Official Video) </h5>
                 <div class="d-flex bd-highlight">
-                    <div class="p-2 flex-grow-1 bd-highlight">177,750,051 vistas•13 oct. 2016</div>
-                    <div class="p-2 bd-highlight"><i class="fas fa-thumbs-up"></i> 2.6 M</div>
-                    <div class="p-2 bd-highlight"><i class="fas fa-thumbs-down"></i> 95,997</div>
-                    <div class="p-2 bd-highlight"><i class="fas fa-share"></i> COMPARTIR</div>
-                    <div class="p-2 bd-highlight"><i class="fas fa-folder-plus"></i> GUARDAR</div>
-                    <div class="p-2 bd-highlight"><i class="fas fa-ellipsis-h"></i></div>
+                    <div class="p-2 flex-grow-1 bd-highlight colorLetter">177,750,051 vistas•13 oct. 2016</div>
+                    <div class="p-2 bd-highlight colorLetter"><i class="fas fa-thumbs-up"></i> 2.6 M</div>
+                    <div class="p-2 bd-highlight colorLetter"><i class="fas fa-thumbs-down"></i> 95,997</div>
+                    <div class="p-2 bd-highlight colorLetter"><i class="fas fa-share"></i> COMPARTIR</div>
+                    <div class="p-2 bd-highlight colorLetter"><i class="fas fa-folder-plus"></i> GUARDAR</div>
+                    <div class="p-2 bd-highlight colorLetter"><i class="fas fa-ellipsis-h"></i></div>
                 </div>
                 <hr class="hr">
                 <div class="d-flex bd-highlight">
-                    <div class="p-2 flex-grow-1 bd-highlight text-white"><img
+                    <div class="p-2 flex-grow-1 bd-highlight text-white"><img class="imgVideo"
                             src="https://yt3.ggpht.com/a/AATXAJwtg4RzEN6Tnk6o3Pl6EEW9zmKJJ6687BWynExA=s48-c-k-c0xffffffff-no-nd-rj">
                         The Weeknd</div>
                     <div class="p-2 bd-highlight"><button class="btn btn-danger">SUSCRIBIRSE</button></div>
@@ -77,7 +77,7 @@
                     <br>
                     <a href="http://theweeknd.co/StarboyYD" target="_blank">http://theweeknd.co/StarboyYD</a>
                     <br>
-                    <span style="color: grey;">MOSTRAR MÁS</span>
+                    <span class="colorLetter">MOSTRAR MÁS</span>
                 </div>
                 <br>
                 <hr class="hr">
@@ -85,8 +85,109 @@
                     <span class="text-white">134,899 comentarios</span>
                     <br>
                     <br>
-                    <span><img
-                            src="https://lh3.googleusercontent.com/a-/AOh14GgZIP-KV2CEaz_qPQEPhokhMxjPsy3J4OMi1JbLXA=s88"> Agregar un comentario</span>
+                    <span class="colorLetter"><img class="imgAccount"
+                            src="https://lh3.googleusercontent.com/a-/AOh14GgZIP-KV2CEaz_qPQEPhokhMxjPsy3J4OMi1JbLXA=s88"> Agregar un comentario público... </span>
+                    <hr class="hr">        
+                </div>
+                <br>
+                <!--                                        Sección de comentarios                                            -->
+                <div class="row">
+                    <div class="col-4">
+                      <img id="img" style="border-radius: 100%; width: 18%;" alt="" width="48"
+                        src="https://yt3.ggpht.com/a/AATXAJz8kjF_ZH90PkroVthQVzKt1-hdYK2nMjcYTTIL=s48-c-k-c0xffffffff-no-rj-mo">
+                    </div>
+                    <div class="col-8">
+                      <div class="col-12">
+                        <p class="comentariosv2">Lucid Dreams</p>
+                        <p class="comentariosv3">Great Song!</p>
+                        <p style="margin-left: -220px;" class="colorLetter"><i class="fas fa-thumbs-up colorLetter"></i> 
+                            <i class="fas fa-thumbs-down colorLetter"></i> RESPONDER </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                      <img id="img" style="border-radius: 100%; width: 18%;" alt="" width="48"
+                        src="https://yt3.ggpht.com/a/AATXAJw0I9qzY1YjvVc3jIuuEhF7p29A5hzV7NzqJvc=s48-c-k-c0xffffffff-no-rj-mo">
+                    </div>
+                    <div class="col-8">
+                      <div class="col-12">
+                        <p class="comentariosv2">Deep House</p>
+                        <p class="comentariosv3">Imagine they did all that and the guy forgot to start recording</p>
+                        <p style="margin-left: -220px;" class="colorLetter"><i class="fas fa-thumbs-up colorLetter"> </i> 
+                            <i class="fas fa-thumbs-down colorLetter"></i> RESPONDER </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                      <img id="img" style="border-radius: 100%; width: 18%;" alt="" width="48"
+                        src="https://yt3.ggpht.com/a/AATXAJxXfti0dOqKzFYnb10gxr8ZHDuqy821FVgZ8tdCQA=s48-c-k-c0xffffffff-no-rj-mo">
+                    </div>
+                    <div class="col-8">
+                      <div class="col-12">
+                        <p class="comentariosv2">Just Some Bigfoot With Internet Access</p>
+                        <p class="comentariosv3">What your grandparents had to do to get to school every morning</p>
+                        <p style="margin-left: -220px;" class="colorLetter"><i class="fas fa-thumbs-up colorLetter"></i> 
+                            <i class="fas fa-thumbs-down colorLetter"></i> RESPONDER </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                      <img id="img" style="border-radius: 100%; width: 18%;" alt="" width="48"
+                        src="https://yt3.ggpht.com/a/AATXAJxJf5ybztli2vVia9ZXhVeeul4ACbeb6aB88jGFgA=s48-c-k-c0xffffffff-no-rj-mo">
+                    </div>
+                    <div class="col-8">
+                      <div class="col-12">
+                        <p class="comentariosv2">Dan.G59</p>
+                        <p class="comentariosv3">Imagine being a cop and training for months only to miss 90% of your shots.</p>
+                        <p style="margin-left: -220px;" class="colorLetter"><i class="fas fa-thumbs-up colorLetter"></i> 
+                            <i class="fas fa-thumbs-down colorLetter"></i> RESPONDER </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                      <img id="img" style="border-radius: 100%; width: 18%;" alt="" width="48"
+                        src="https://yt3.ggpht.com/a/AATXAJwcPmARfsWWMF9xZMILejbLxjMCW0WjZl9c0LOohg=s48-c-k-c0xffffffff-no-rj-mo">
+                    </div>
+                    <div class="col-8">
+                      <div class="col-12">
+                        <p class="comentariosv2">Pedrito el sabio</p>
+                        <p class="comentariosv3">TE MA ZO</p>
+                        <p style="margin-left: -220px;" class="colorLetter"><i class="fas fa-thumbs-up colorLetter"></i> 
+                            <i class="fas fa-thumbs-down colorLetter"></i> RESPONDER </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                      <img id="img" style="border-radius: 100%; width: 18%;" alt="" width="48"
+                        src="https://yt3.ggpht.com/a/AATXAJwhvjUKOIGB7xd6Z-VD5nW1USyIxr6Xu82Oq72W=s48-c-k-c0xffffffff-no-rj-mo">
+                    </div>
+                    <div class="col-8">
+                      <div class="col-12">
+                        <p class="comentariosv2">Pako</p>
+                        <p class="comentariosv3">She loves every body</p>
+                        <p style="margin-left: -220px;" class="colorLetter"><i class="fas fa-thumbs-up colorLetter"></i> 
+                            <i class="fas fa-thumbs-down colorLetter"></i> RESPONDER </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                      <img id="img" style="border-radius: 100%; width: 18%;" alt="" width="48"
+                        src="https://yt3.ggpht.com/a/AATXAJy5KyXd66HDQxIrZpDkEZzG20Q0ftyxSDbH4EWauw=s48-c-k-c0xffffffff-no-rj-mo">
+                    </div>
+                    <div class="col-8">
+                      <div class="col-12">
+                        <p class="comentariosv2">U2</p>
+                        <p class="comentariosv3">Is a dark philosophy</p>
+                        <p style="margin-left: -220px;" class="colorLetter"><i class="fas fa-thumbs-up colorLetter"></i> 
+                            <i class="fas fa-thumbs-down colorLetter"></i> RESPONDER </p>
+                      </div>
+                    </div>
                 </div>
             </div>
             <div class="col-4">
